src/ui/draw_blocks/snapshots/oxker__ui__draw_blocks__error__tests__draw_blocks_error_custom_keymap_two_definitions.snap
---
source: src/ui/draw_blocks/error.rs
expression: setup.terminal.backend()
---
"                                       "
" ╭────────────── Error ──────────────╮ "
" │                                   │ "
" │   Unable to exec into container   │ "
" │                                   │ "
" │    ( Back Tab | m ) clear error   │ "
" │                                   │ "
" │      ( F4 | End ) quit oxker      │ "
" │                                   │ "
" ╰───────────────────────────────────╯ "
"                                       "
