src/ui/draw_blocks/snapshots/oxker__ui__draw_blocks__error__tests__draw_blocks_error_docker_connect_error_custom_host.snap
---
source: src/ui/draw_blocks/error.rs
expression: setup.terminal.backend()
---
"                                                            "
" ╭──────────────────────── Error ─────────────────────────╮ "
" │                                                        │ "
" │   Unable to access docker daemon @ "/test/host.sock"   │ "
" │                                                        │ "
" │          oxker::v0.00.000 closing in 04 seconds        │ "
" │                                                        │ "
" │                    ( q ) quit oxker                    │ "
" │                                                        │ "
" ╰────────────────────────────────────────────────────────╯ "
"                                                            "
